# program_analysis

./: Cargo.toml  Logos.toml  build-analyses.sh  commons.rs  interpreter.rs  lib.rs  mytest.lir  out.txt  run-control.sh  run-generator.sh  run-rdef.sh  run-slice.sh  run-solver.sh  run-taint.sh  tree.txt
front_end/: lower.rs  mod.rs  parser.rs
front_end/ast/: validate.rs
front_end/tests/: lower_tests.rs
middle_end/: analysis.rs  analysis_constraints.rs  analysis_rdef.rs  analysis_rdef_ptrs.rs  constraints.rs  control_analysis.rs  lir.rs  mod.rs  optimization.rs  slice.rs  taint.rs
middle_end/analysis/: call_graph.rs  constant_prop.rs  integer_interval.rs  liveness.rs  reaching_defs.rs  tests.rs
middle_end/analysis_constraints/: constraints_gen.rs
middle_end/analysis_rdef/: reaching_defs.rs
middle_end/analysis_rdef_ptrs/: reaching_defs_ptrs.rs
middle_end/constraints/: constraint_solve.rs  fromstr_impl.rs
middle_end/control_analysis/: control.rs
middle_end/lir/: associated_impl.rs  cfg_dump_impl.rs  display_impl.rs  fromstr_impl.rs  id_type_factories.rs  misc_impl.rs  validate.rs
middle_end/optimization/: constant_prop.rs  copy_prop.rs  dead_store_elimination.rs  inlining.rs  tests.rs
middle_end/slice/: slice_solve.rs
middle_end/taint/: taint_analysis.rs
test-inputs-03/solve/: lam.lir.constraints  lam.lir.solution  lam2.lir.solution  lam3.lir.constraints  lam3.lir.solution  no_proj.lir.constraints  no_proj.lir.solution  proj1.lir.solution  proj2.lir.solution  proj3.lir.constraints  proj3.lir.solution  proj4.lir.constraints  proj4.lir.solution
(+219 files in other folders)
