[package]
name = "optimization"
version = "0.1.0"
edition = "2021"

[dependencies]
pretty_assertions = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pest = "2.0"
pest_derive = "2.0"
derive_more = "0.99"
hashconsing = "1.0"   # Used by LIR based on middle_end/lir.rs imports
logos = { version = "0.14.2", features = ["std"] }
serde-lexpr = "0.1.3"
ascent = "0.7.0"

[lib]
path = "lib.rs"

[[bin]]
name = "rdef"
path = "bin/rdef.rs"

[[bin]]
name = "control"
path = "bin/control.rs"

[[bin]]
name = "slice"
path = "bin/slice.rs"

[[bin]]
name = "taint"
path = "bin/taint.rs"

[[bin]]
name = "constraint_gen"
path = "bin/constraints_gen.rs"

[[bin]]
name = "constraint_solve"
path = "bin/constraints_solve.rs"